Fixet: cambiar texto de portafolio > proyectos | contraste en indicadoress de estudio | contraste en hover btn CV - Hablemos & Fasalpa. (logo) | cambio de color hamburguesa | espacio de links de depliegue en cad toDo-List

--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,9 @@ section {
 .logo span {
   color: var(--accent);
 }
+.logo:hover{
+  color: var(--accent)!important;
+}
 
 .navbar-nav {
   align-items: center;
@@ -128,6 +131,7 @@ section {
 
 .btn-nav:hover {
   background: var(--accent) !important;
+  color: var(--bg)!important;
 }
 
 #cambiarModo {
@@ -143,6 +147,7 @@ section {
 #cambiarModo:hover {
   background-color: rgba(214, 138, 87, 0.18);
   transform: translateY(-2px);
+  color: var(--bg)!important;
 }
 
 .navbar-toggler {
@@ -608,15 +613,7 @@ input:checked + label img.moon {
   padding: 30px;
 }
 
-.project-content span {
-  display: inline-block;
-  margin-bottom: 20px;
-  padding: 9px 15px;
-  border-radius: 999px;
-  color: var(--accent-dark);
-  font-size: 0.9rem;
-  font-weight: 600;
-}
+
 
 .project-content h3 {
   margin-bottom: 15px;
@@ -675,7 +672,7 @@ input:checked + label img.moon {
 
   background: var(--green-light);
 
-  color: var(--accent-dark);
+  color: var(--accent);
 
   font-size: 0.85rem;
   font-weight: 700;
@@ -888,6 +885,13 @@ input:checked + label img.moon {
 }
 
 /*RESPONSIVE DESIGN*/
+
+
+@media (max-width:1200px){
+    .navbar-nav{
+        gap:6px;
+    }
+}
 
 @media (max-width: 992px) {
   .section-title h2 {
